err/zhao.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zhao'...
Compiling './lib/python3.5/site-packages/zhao/xin_datetime.py'...
***   File "./lib/python3.5/site-packages/zhao/xin_datetime.py", line 30
    return f'{days}{hours:02d}:{mins:02d}:{secs:02d}'
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zhao/xin_math'...
Compiling './lib/python3.5/site-packages/zhao/xin_math/__init__.py'...
***   File "./lib/python3.5/site-packages/zhao/xin_math/__init__.py", line 478
    print u'测试完毕'
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zhao/xin_mysql.py'...
***   File "./lib/python3.5/site-packages/zhao/xin_mysql.py", line 16
    print(f'MySQL Error[{number}]: {message}')
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zhao/xin_net.py'...
***   File "./lib/python3.5/site-packages/zhao/xin_net.py", line 68
    headers['Range'] = f'bytes={offset}-{offset+size}'
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zhao-0.0.8.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
